--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "~7.1.2",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/cli": "^7.3.2",
+    "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
